--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>The Golden Template | Home :: w3layouts</title>
+<title>Luiss</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600,300' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <script type="text/javascript" src="js/jquery.min.js"></script>
 	 	<!---strat-slider---->
@@ -60,11 +55,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<!-- start top-nav-->
 		<div class="h_right">
 			<ul class="menu">		
-				<li class="active"><a  href="#home">Home</a></li>
-				<li><a href="#services" class="scroll">Services</a></li>
+				<li class="active"><a  href="#home">Inicial</a></li>
+				<li><a href="#services" class="scroll">Serviços</a></li>
 				<li><a href="#portfolio" class="scroll">Portfolio</a></li>
-				<li><a href="#about" class="scroll">About</a></li>
-				<li class="last"><a href="#contact"  class="scroll">Contact</a></li>
+				<li><a href="#about" class="scroll">Sobre</a></li>
+				<li class="last"><a href="#contact"  class="scroll">Contato</a></li>
 			</ul>			
 			<!-- start smart_nav * -->
 	        <nav class="nav">
@@ -89,25 +84,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<!---start-da-slider----->
 				<div id="da-slider" class="da-slider">
 				<div class="da-slide">
-					<p>Welcome To Our Studio!</p>
-					<h2>IT'S NICE TO MEET YOU</h2>
-					<p class="a"><a href="#">TELL ME MORE</a></p>
+					<p>Bem Vindo ao meu estúdio!</p>
+					<h2>PRAZER EM CONHECÊ-LO</h2>
+					<p class="a"><a href="#">ME DIGA MAIS</a></p>
 				</div>
 				<div class="da-slide">
-					<p>Welcome To Our Studio!</p>
-					<h2>IT'S NICE TO MEET YOU</h2>
-					<p class="a"><a href="#">TELL ME MORE</a></p>
+					<p>Bem Vindo ao meu estúdio!</p>
+					<h2>PRAZER EM CONHECÊ-LO</h2>
+					<p class="a"><a href="#">ME DIGA MAIS</a></p>
 				</div>
 				<div class="da-slide">
-					<p>Welcome To Our Studio!</p>
-					<h2>IT'S NICE TO MEET YOU</h2>
-					<p class="a"><a href="#">TELL ME MORE</a></p>
+					<p>Bem Vindo ao meu estúdio!</p>
+					<h2>PRAZER EM CONHECÊ-LO</h2>
+					<p class="a"><a href="#">ME DIGA MAIS</a></p>
 				</div>
 				<div class="da-slide">
-					<p>Welcome To Our Studio!</p>
-					<h2>IT'S NICE TO MEET YOU</h2>
-					<p class="a"><a href="#">TELL ME MORE</a></p>
-				</div>	
+					<p>Bem Vindo ao meu estúdio!</p>
+					<h2>PRAZER EM CONHECÊ-LO</h2>
+					<p class="a"><a href="#">ME DIGA MAIS</a></p>
+				</div>
 				<nav class="da-arrows">
 					<span class="da-arrows-prev"></span>
 					<span class="da-arrows-next"></span>
@@ -118,8 +113,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		  <div class="services" id="services">
 		  	<div class="wrap">
-		  		<h3>SERVICES</h3>
-		  		<p>Proin iaculis purus consequat sem cure.</p>
+		  		<h3>SERVIÇOS</h3>
+		  		<p>"Sabedoria é saber o que fazer; habilidade é saber como fazer; virtude é fazer". David Starr Jordan</p>
 				<div class="col_1_of_3 span_1_of_3">
 					<img src="images/service1.png" alt=""/>
 					<h4><a href="#">E-Commerce</a></h4>
@@ -141,7 +136,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
  		<div class="portfolio" id="portfolio">
 		  	<div class="wrap">
 		  		<h3>PORTFOLIO</h3>
-		  		<p>Proin iaculis purus consequat sem cure.</p>
+		  		<p>"Uma máquina pode fazer o trabalho de 50 pessoas comuns. Nenhuma máquina pode fazer o trabalho de uma pessoa extraordinária." Elbert Hubbard</p>
 			<div class="col_1_of_3 span_1_of_3">
 					  <div class="view view-fourth">
                         <img src="images/port1.jpg">
@@ -220,24 +215,24 @@ License URL: http://creativecommons.org/licenses/by/3.0/
    		 <!---start-about---->
 		  <div class="about" id="about">
 		  	<div class="wrap">
-		  		<h3>ABOUT</h3>
-		  		<p class="a">Proin iaculis purus consequat sem cure.</p>
+		  		<h3>SOBRE</h3>
+		  		<p class="a">"Não viva para que a sua presença seja notada, mas para que a sua falta seja sentida." Bob Marley</p>
 				<!---start-about-time-line---->
 				<div class="about-time-line">
 					<li>
 							<div class="cbp_tmicon img1"> </div>
 							<div class="cbp_tmlabel">
-								<h2>JULY 2010</h2>
-								<h2>Our Humble Beginnings</h2>
-								<p>Proin iaculis purus consequat sem cure  digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
+								<h2>FEVEREIRO 2017</h2>
+								<h2>Onde Tudo Começou</h2>
+								<p>Inciou o Ensino Médio Integrado ao Curso Técnico de Informática no Centro de Educação Estadual "Tancredo Neves" em Brazopolis-MG.</p>
 							</div>
 					</li>
 					<li>
 							<div class="cbp_tmicon1 img2"> </div>
 							<div class="cbp_tmlabel cbp_tmlabel1">
-								<h2>JANUARY 2011</h2>
-								<h2>Facing Startup Battles </h2>
-								<p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+								<h2>DEZEMBRO 2019</h2>
+								<h2>Um Ciclo se Encerrando</h2>
+								<p>Recem formado</p>
 							</div>
 					</li><br />
 					<li>
