--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Luiss</title>
+<title>Programador | Luis Ricardo</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,700,600,300' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -50,7 +50,7 @@
 	<div class="wrap">
 			<div class="header">
 				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" alt=""/></a>
+					<a href="index.html"><img src="imagezs/logo.png" alt=""/></a>
 				</div>
 		<!-- start top-nav-->
 		<div class="h_right">
@@ -64,11 +64,11 @@
 			<!-- start smart_nav * -->
 	        <nav class="nav">
 	            <ul class="nav-list">
-	                <li class="nav-item"><a  href="#home">Home</a></li>
-	                <li class="nav-item"><a href="#services" class="scroll">Services</a></li>
+	                <li class="nav-item"><a  href="#home">Inicial</a></li>
+	                <li class="nav-item"><a href="#services" class="scroll">Serviços</a></li>
 	                <li class="nav-item"><a href="#portfolio" class="scroll">Portfolio</a></li>	            
-	                <li class="nav-item"><a href="#about" class="scroll">About</a></li>
-	                <li class="nav-item"><a href="#contact"  class="scroll">Contact</a></li>
+	                <li class="nav-item"><a href="#about" class="scroll">Sobre</a></li>
+	                <li class="nav-item"><a href="#contact"  class="scroll">Contato</a></li>
 	                <div class="clear"></div>
 	            </ul>
 	        </nav>
@@ -89,19 +89,19 @@
 					<p class="a"><a href="#">ME DIGA MAIS</a></p>
 				</div>
 				<div class="da-slide">
-					<p>Bem Vindo ao meu estúdio!</p>
-					<h2>PRAZER EM CONHECÊ-LO</h2>
-					<p class="a"><a href="#">ME DIGA MAIS</a></p>
+					<p>Deseja fazer algum projeto?!</p>
+					<h2>Olhe alguns trabalhos!</h2>
+					<p class="a"><a href="#portfolio">CLIQUE AQUI</a></p>
 				</div>
 				<div class="da-slide">
-					<p>Bem Vindo ao meu estúdio!</p>
-					<h2>PRAZER EM CONHECÊ-LO</h2>
-					<p class="a"><a href="#">ME DIGA MAIS</a></p>
+					<p>Quem sou eu?</p>
+					<h2>Descubra aqui!</h2>
+					<p class="a"><a href="#">QUEM SOU EU!</a></p>
 				</div>
 				<div class="da-slide">
-					<p>Bem Vindo ao meu estúdio!</p>
-					<h2>PRAZER EM CONHECÊ-LO</h2>
-					<p class="a"><a href="#">ME DIGA MAIS</a></p>
+					<p>Fale Comigo!</p>
+					<h2>Vamos se conhecer!</h2>
+					<p class="a"><a href="#">CLIQUE AQUI!</a></p>
 				</div>
 				<nav class="da-arrows">
 					<span class="da-arrows-prev"></span>
@@ -116,19 +116,19 @@
 		  		<h3>SERVIÇOS</h3>
 		  		<p>"Sabedoria é saber o que fazer; habilidade é saber como fazer; virtude é fazer". David Starr Jordan</p>
 				<div class="col_1_of_3 span_1_of_3">
-					<img src="images/service1.png" alt=""/>
-					<h4><a href="#">E-Commerce</a></h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-				</div>
-				<div class="col_1_of_3 span_1_of_3">
 					<img src="images/service2.png" alt=""/>
-					<h4><a href="#">Responsive Web</a></h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<h4><a href="#">Desenvolvimento Web</a></h4>
+					<p>Serviços de criação de sites, sites institucionais, hotsites, portais, sites promocionais, blogs, sites administráveis e afins!</p>
 				</div>
 				<div class="col_1_of_3 span_1_of_3">
 					<img src="images/service3.png" alt=""/>
-					<h4><a href="#">Web Security</a></h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+					<h4><a href="#">Desenvolvimento Mobile</a></h4>
+					<p>Serviços de criação de apps mobile, que trabalham sozinhos ou em conjunto com seu site, para facilitar a vida, segurança e a experiência do usuário ao ultilizar seu serviço!</p>
+				</div>
+				<div class="col_1_of_3 span_1_of_3">
+					<img src="images/service1.png" alt=""/>
+					<h4><a href="#">Sistemas de Gestão</a></h4>
+					<p>Criação de softwares de automação, controle de estoque e fins onde diminui os esforços operacionais e auxilie na tomada de decisão, proporcinando segurança quanto a confiabilidade de seus dados entre outros!</p>
 				</div>
 				 <div class="clear"></div>
    		   </div>
@@ -141,37 +141,37 @@
 					  <div class="view view-fourth">
                         <img src="images/port1.jpg">
 	                    <div class="mask">
-	                        <h2>Ebony</h2>
-	                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
-	                        <a href="#" class="info">Read More</a>
+	                        <h2>getJob()</h2>
+	                        <p>O getJob() é um software mobile e web completo que contem um chat, comunicação em real time com backend desenvolvido em Java Script com nodeJs.</p>
+	                        <a href="https://getjob-front.herokuapp.com/" target="_blank" class="info">Veja aqui!</a>
 	                    </div>
                 	</div>
-					<h4><a href="#">Ebony & lvory</a></h4>
-					<p>Branding</p>
+					<h4><a href="#">getJob()</a></h4>
+					<p>Plataforma de Emprego</p>
 				</div>
 				<div class="col_1_of_3 span_1_of_3">
 					 <div class="view view-fourth">
                         <img src="images/port2.jpg">
 	                    <div class="mask">
-	                        <h2>Stationary</h2>
-	                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
-	                        <a href="#" class="info">Read More</a>
+	                        <h2>Jarvis</h2>
+							<p>Base de IA onde possibilitava o usúario conversar com sua propría máquina ultilizando a linguagem Python com a biblioteca chatterbot, onde o bot aprendia de acordo conversavam com ele</p>
+							<a href="https://github.com/Luiss1569/Chat-Bot/blob/master/Main.py" target="_blank" class="info">Veja o código!</a>
 	                    </div>
                 	</div>
-					<h4><a href="#">Smart Stationary</a></h4>
-					<p>Print Design</p>
+					<h4><a href="#">ChatBot</a></h4>
+					<p>Inteligência Artificial</p>
 				</div>
 				<div class="col_1_of_3 span_1_of_3">
 					 <div class="view view-fourth">
                         <img src="images/port3.jpg">
 	                    <div class="mask">
-	                        <h2>Poster</h2>
-	                        <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
-	                        <a href="#" class="info">Read More</a>
+	                        <h2>Site Web</h2>
+	                        <p>Site simples mostrando um pouco sobre a nossa Via Lactea, ultilizando Html5, css3 e JavaScript para sua construção.</p>
+	                        <a href="http://universo.rf.gd/?" target="_blank" class="info">Veja aqui!</a>
 	                    </div>
                 	</div>
-					<h4><a href="#">Clever Poster</a></h4>
-					<p>Print Design</p>
+					<h4><a href="#">Universo</a></h4>
+					<p>Web Design</p>
 				</div>
 			  <div class="col_1_of_3 span_1_of_3">
 					 <div class="view view-fourth">
@@ -365,7 +365,7 @@
 				<div class="bottom-footer">
 					<div class="wrap"> 
 						<div class="bottom-footer-left">
-							<p>&#169; Copyright 2014 Template by <a href="http://w3layouts.com/">W3layouts</a></p>
+							<p>&#169; Copyright 2014 2Template by <a href="http://w3layouts.com/">W3layouts</a></p>
 						</div>
 						<div class="bottom-footer-center">
 							<ul class="bottom-social-icons">
