um pouco sobre mim

--- a/index.html
+++ b/index.html
@@ -263,46 +263,30 @@
 				<div class="team-members">
 					<div class="wrap"> 
 						<div class="tm-head">
-							<h3>our amazing team</h3>
-							<p>Proin iaculis purus consequat sem cure.</p>
+							<h3>Um pouco sobre mim!</h3>
+							<p>Viva de maneira mais leve, divirta-se, sorria, beije a vida e seja feliz!" Mônica Liberato</p>
 						</div>
-						<div class="tm-head-grids">
+						<div class="tm-head-point">
 							<div class="tm-head-grid">
-								<img src="images/team-member1.jpg" alt="" />
-								<h4>Kimberly Thompson</h4>
-								<h5>Marketer</h5>
+								<img src="images/team-member.jpg" alt="" />
+								<h4>Luis Ricardo</h4>
+								<h5>Programador</h5>
 								<ul class="top-social-icons">
-									<li><a class="twitter simptip-position-bottom simptip-movable" data-tooltip="twitter" href="#"> </a></li>
-									<li><a class="facebook simptip-position-bottom simptip-movable" data-tooltip="Facebook" href="#"> </a></li>
-									<li><a class="pin simptip-position-bottom simptip-movable" data-tooltip="pintrest" href="#"> </a></li>
-									<div class="clear"> </div>
-								</ul>
-							</div>
-							<div class="tm-head-grid">
-								<img src="images/team-member2.jpg" alt="" />
-								<h4>Rico Massimo</h4>
-								<h5>Coder</h5>
-								<ul class="top-social-icons">
-									<li><a class="twitter simptip-position-bottom simptip-movable" data-tooltip="twitter" href="#"> </a></li>
-									<li><a class="facebook simptip-position-bottom simptip-movable" data-tooltip="Facebook" href="#"> </a></li>
-									<li><a class="pin simptip-position-bottom simptip-movable" data-tooltip="pintrest" href="#"> </a></li>
-									<div class="clear"> </div>
-								</ul>
-							</div>
-							<div class="tm-head-grid">
-								<img src="images/team-member3.jpg" alt="" />
-								<h4>Uku Mason</h4>
-								<h5>Graphic Designer</h5>
-								<ul class="top-social-icons">
-									<li><a class="twitter simptip-position-bottom simptip-movable" data-tooltip="twitter" href="#"> </a></li>
-									<li><a class="facebook simptip-position-bottom simptip-movable" data-tooltip="Facebook" href="#"> </a></li>
-									<li><a class="pin simptip-position-bottom simptip-movable" data-tooltip="pintrest" href="#"> </a></li>
+									<li><a class="facebook simptip-position-bottom simptip-movable" data-tooltip="Facebook" target="_blank" href="https://www.facebook.com/LuisRicardo1569"> </a></li>
+									<li><a class="git simptip-position-bottom simptip-movable" data-tooltip="GitHub" target="_blank" href="https://github.com/luiss1569"> </a></li>
+									<li><a class="gmail simptip-position-bottom simptip-movable" data-tooltip="Email" target="_blank" href="mailto:luisricardo0626@gmail.com"> </a></li>
+									<li><a class="insta simptip-position-bottom simptip-movable" data-tooltip="Instagram" target="_blank" href="https://www.instagram.com/luisricar_do/"> </a></li>
 									<div class="clear"> </div>
 								</ul>
 							</div>
 							<div class="clear"> </div>
 						</div>
-						<p class="team-info">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt proin iaculis.</p>
+						<p class="team-info">Meu nome é Luis, tenho 17 anos, sou natural de São Bento do Sapucai. Eu estou solteiro e não tenho filhos. Desejei ser varias coisas desde criança. Mas algo que sempre esteve comigo foi a música. Usava as panelas da minha mãe para batucar meus próprios sons.</p>
+						<p class="team-info">Recebi uma educação muito severa dos meus pais e cresci aprendendo a valorizar cada coisa que tenho e a correr atrás dos meus objetivos. Aprendi que nada na vida vem tão facilmente e que o trabalho, a boa educação e o respeito ao próximo fazem de nós pessoas melhores.					
+							Sempre estudei em escola pública e nunca encarei isso como barreira. Eu precisava me superar todos os dias. Aos poucos fui aprendendo a construir e manter as relações de amizade e as profissionais também. Tornei-me bastante comunicativo e percebi que havia me superado.						
+							Durante minha formação profissional precisei sacrificar um pouco do lazer quando resolvi entrar numa escola de tempo integral, onde eu faria o ensino médio integrado ao curso técnico de informática, uma escola pública em uma cidade vizinha foi onde descobri mais uma paixão:<strong> a Programação</strong>. Todo esforço foi válido.</p>
+							<p class="team-info">Hoje, sigo buscando ser um profissional melhor e continuo me capacitando. Não sou uma pessoa perfeita, mas estou todo o tempo buscando melhorar. Afinal, sabemos que o amadurecimento vem com o tempo e com as experiências, e eu sempre busco aprender com as minhas.	
+								Valorizo muito a minha família e, ainda mais, os momentos que passo com ela. Ela é um pilar importante na minha formação, na minha educação e no meu dia a dia. Eu sei o quanto é importante lutar pelo que queremos e sonhamos, faço isso todos os dias. Hoje me descobri uma pessoa determinada, focada, forte e persistente, lutando sempre por melhores oportunidades.</p>
 					</div>
 				</div>
 				<!----//End-team-members----> 
