--- a/index.html
+++ b/index.html
@@ -233,17 +233,15 @@
           <div class="view view-fourth">
             <img src="images/port4.jpg" />
             <div class="mask">
-              <h2>Record</h2>
+              <h2>Site Pessoal</h2>
               <p>
-                A wonderful serenity has taken possession of my entire soul,
-                like these sweet mornings of spring which I enjoy with my whole
-                heart.
+                Este site desenvolvido para minha divulgação pessoal, ultilizando uma forma prática e dinâmica de estilos e efeitos.
               </p>
               <a href="#" class="info">Read More</a>
             </div>
           </div>
-          <h4><a href="#">Vinyl Record</a></h4>
-          <p>Product Mock-Up</p>
+          <h4><a href="#">Luis Ricardo</a></h4>
+          <p>Personal Branding</p>
         </div>
         <div class="col_1_of_3 span_1_of_3">
           <div class="view view-fourth">
@@ -544,7 +542,7 @@
     <div class="contact" id="contact">
       <div class="wrap">
         <h3>Fale Comigo</h3>
-        <p class="a">"Pra que Indireta?O Bonito é Falar na Cara!" GabrielaLopes</p>
+        <p class="a">"Pra que Indireta? O Bonito é Falar na Cara!" Gabriela Lopes</p>
         <div class="form">
           <div class="form-text">
             <input
