--- a/index.html
+++ b/index.html
@@ -595,8 +595,7 @@
       <div class="wrap">
         <div class="bottom-footer-left">
           <p>
-            &#169; Copyright 2014 2Template by
-            <a href="http://w3layouts.com/">W3layouts</a>
+            &#169; Copyright 2019
           </p>
         </div>
         <div class="bottom-footer-center">
