--- a/index.html
+++ b/index.html
@@ -279,15 +279,15 @@
       </div>
     </div>
     <!---start-about---->
-    <div class="about" id="about">
+    <!-- <div class="about" id="about">
       <div class="wrap">
         <h3>SOBRE</h3>
         <p class="a">
           "Não viva para que a sua presença seja notada, mas para que a sua
           falta seja sentida." Bob Marley
         </p>
-        <!---start-about-time-line---->
-        <div class="about-time-line">
+        -start-about-time-line---->
+        <!--<div class="about-time-line">
           <li>
             <div class="cbp_tmicon img1"></div>
             <div class="cbp_tmlabel">
@@ -340,7 +340,7 @@
           <div class="clear"></div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!---//end-about---->
     <!----start-team-members---->
     <div class="team-members">
