add medeiros no port

--- a/index.html
+++ b/index.html
@@ -248,17 +248,15 @@
           <div class="view view-fourth">
             <img src="images/port5.jpg" />
             <div class="mask">
-              <h2>Design</h2>
+              <h2>Site Web</h2>
               <p>
-                A wonderful serenity has taken possession of my entire soul,
-                like these sweet mornings of spring which I enjoy with my whole
-                heart.
+               Um site com personalidade para divulgar uma barbearia espetacular , usando e abusando de efeitos visuais, feito de um jeito ínico.
               </p>
-              <a href="#" class="info">Read More</a>
+              <a href="https://medeirossbs.herokuapp.com" target="_blank" class="info">VEJA AQUI</a>
             </div>
           </div>
-          <h4><a href="#">Tree House Template</a></h4>
-          <p>Web Design</p>
+          <h4><a href="#">Barbearia Medeiros</a></h4>
+          <p>Commercial Branding</p>
         </div>
         <div class="col_1_of_3 span_1_of_3 meio">
           <div class="view view-fourth">
@@ -598,7 +596,7 @@
       <div class="wrap">
         <div class="bottom-footer-left">
           <p>
-            &#169; Copyright 2019
+            &#169; Copyright <script>document.write(new Date().getFullYear());</script> Todos os direitos reservados
           </p>
         </div>
         <div class="bottom-footer-center">
