add game da snake

--- a/game/index.html
+++ b/game/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="points">Pontos: 0</div>
       <button id='play'onClick="play()">Play</button>
-      <canvas id="game-canvas" width="30" height="30"></canvas>
+      <canvas id="game-canvas" class="canvas" width="30" height="30"></canvas>
     </div>
     <script src="game.js"></script>
     <script type="text/javascript">
@@ -48,7 +48,6 @@
       }
 
       function play(){
-          document.getElementById('play').classList.add('some')
           main()
       }
     </script>
